Hide the list bullet points to prevent container overflows
+ Detected and addressed the case when the bullet points list overflowing over the container.

--- a/recipes/pizza.css
+++ b/recipes/pizza.css
@@ -150,3 +150,6 @@ li {
     opacity: 0;
     transition: opacity 0.5s ease-in-out;
 }
+.ingredients ol {
+    list-style-type: none;
+}
